# bevy-fun-examples

./: Cargo.toml  README.md
assets/models/: fish.glb  fish1.glb  level.blend  level1.glb
assets/shaders/: fish-wave.wgsl
examples/blender_gltf_components/: README.md  main.rs
examples/blender_gltf_components/camera/: camera_replace_proxies.rs  camera_tracking.rs  mod.rs
examples/blender_gltf_components/models/: gltf_to_components.rs  mod.rs  models_replace_proxies.rs  process_gltfs.rs
examples/vertex_animation/: README.md  fishy.rs
