[package]
name = "bevy-examples"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.12"

[dev-dependencies]
bevy_editor_pls = { git="https://github.com/jakobhellermann/bevy_editor_pls.git" }
serde_json = "1.0"
serde = "*"

[[example]]
name = "vertex_animation"
path = "examples/vertex_animation/fishy.rs"



[[example]]
name = "blender_gltf_components"
path = "examples/blender_gltf_components/main.rs"